color attributes crashes blender when they are not on domain vertex or face corner #97502

Closed
opened 2022-04-21 11:07:07 +02:00 by lictex_ · 7 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.15

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-04-20 19:32, hash: b67ccc333a
Worked: idk
Short description of error
when using color attributes, blender crashes if there are attributes with type color but not on domain vertex or face corner

Exact steps for others to reproduce the error

  1. select the default cube
  2. go to object data properties, expand the attributes and color attributes panel
  3. add an attribute in attributes panel, with domain face and type color

note console outputs

uilist_filter_items: Error, py func returned 1 items in filter_neworder, 0 or none were expected.```
  1. add an attribute in color attributes panel, with domain vertex and type color
  2. move the cursor around to trigger an ui update, crash
    or start from 3.
  3. switch to edit mode then back to object mode, crash
**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.15 **Blender Version** Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-04-20 19:32, hash: `b67ccc333a` Worked: idk **Short description of error** when using color attributes, blender crashes if there are attributes with type *color* but not on domain *vertex* or *face corner* **Exact steps for others to reproduce the error** 1. select the default cube 2. go to *object data properties*, expand the *attributes* and *color attributes* panel 3. add an attribute in *attributes* panel, with domain *face* and type *color* > note console outputs > ```uilist_filter_items: Error, py func returned 1 items in filter_flags, 0 or none were expected. > uilist_filter_items: Error, py func returned 1 items in filter_neworder, 0 or none were expected.``` 4. add an attribute in *color attributes* panel, with domain *vertex* and type *color* 5. move the cursor around to trigger an ui update, crash or start from 3. 4. switch to edit mode then back to object mode, crash
Author

Added subscriber: @lictex_1

Added subscriber: @lictex_1
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, will check.

Can confirm, will check.

This issue was referenced by f6d5d01715

This issue was referenced by f6d5d017150c54c1f359f6341d758196584ee9eb
Philipp Oeser self-assigned this 2022-04-21 15:04:11 +02:00
Member

rna_AttributeGroup_color_length seems fine (return zero), but the iterator skip function rna_Attributes_noncolor_layer_skip seems to cause problems (it does not skip other domains)

We then run into the following:

1 ui_block_free_button_groups interface_button_group.c 55   0x5937be8 
2 UI_block_free               interface.cc             3447 0x592d1fd 
3 UI_blocklist_free_inactive  interface.cc             3514 0x592d4be 
4 ED_region_do_draw           area.c                   575  0x4f487c8 
5 wm_draw_window_offscreen    wm_draw.c                729  0x45c1b37 
6 wm_draw_window              wm_draw.c                881  0x45c2117 
7 wm_draw_update              wm_draw.c                1086 0x45c2759 
8 WM_main                     wm.c                     629  0x45bde26 
9 main                        creator.c                547  0x3d88c74 

Will see what I can do.

`rna_AttributeGroup_color_length` seems fine (return zero), but the iterator skip function `rna_Attributes_noncolor_layer_skip` seems to cause problems (it does not skip other domains) We then run into the following: ``` 1 ui_block_free_button_groups interface_button_group.c 55 0x5937be8 2 UI_block_free interface.cc 3447 0x592d1fd 3 UI_blocklist_free_inactive interface.cc 3514 0x592d4be 4 ED_region_do_draw area.c 575 0x4f487c8 5 wm_draw_window_offscreen wm_draw.c 729 0x45c1b37 6 wm_draw_window wm_draw.c 881 0x45c2117 7 wm_draw_update wm_draw.c 1086 0x45c2759 8 WM_main wm.c 629 0x45bde26 9 main creator.c 547 0x3d88c74 ``` Will see what I can do.
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97502
No description provided.